--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "CetZz Labs Landing",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,9 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.0",
     "@lucide/astro": "0.544.0",
     "@tailwindcss/vite": "4.1.13",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "astro": "5.13.7",
+    "motion": "^12.23.24",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "4.1.13"
   }
 }
