--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/vite": "4.1.13",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "astro": "5.13.7",
+    "astro": "^5.14.8",
+    "gsap": "^3.13.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
